# hexdump

./: .copier-answers.yml  LICENSE  README.md  build.gradle.kts  gradle.properties  pyproject.toml  settings.gradle.kts
.github/workflows/: build.yml  release.yml
buildSrc/src/main/kotlin/hexdump/: java.gradle.kts  minecraft.gradle.kts  platform.gradle.kts
buildSrc/src/main/kotlin/hexdump/utils/: mod-dependencies.gradle.kts
common/: build.gradle.kts
common/src/main/kotlin/io/github/jojotastic777/hexdump/: Hexdump.kt  HexdumpAbstractions.kt  HexdumpClient.kt  PatternDump.kt
common/src/main/kotlin/io/github/jojotastic777/hexdump/casting/actions/spells/: OpCongratulate.kt
common/src/main/kotlin/io/github/jojotastic777/hexdump/config/: HexdumpConfig.kt
common/src/main/kotlin/io/github/jojotastic777/hexdump/networking/: HexdumpNetworking.kt
common/src/main/kotlin/io/github/jojotastic777/hexdump/networking/handler/: ClientMessageHandler.kt  ServerMessageHandler.kt
common/src/main/kotlin/io/github/jojotastic777/hexdump/networking/msg/: HexdumpMessage.kt  MsgSyncConfigS2C.kt  PatternDumpS2C.kt
common/src/main/kotlin/io/github/jojotastic777/hexdump/registry/: HexdumpActions.kt  HexdumpRegistrar.kt
common/src/main/resources/: architectury.common.json  hexdump-common.mixins.json
common/src/main/resources/assets/hexcasting/patchouli_books/thehexbook/en_us/entries/patterns/spells/: dummy_spells.json5
common/src/main/resources/assets/hexdump/lang/: en_us.flatten.json5
doc/: README.md  hexdoc.toml
doc/resources/assets/hexdump/lang/: en_us.flatten.json5
doc/src/hexdoc_hexdump/: _hooks.py
fabric/: build.gradle.kts
fabric/src/main/kotlin/io/github/jojotastic777/hexdump/fabric/: FabricHexdump.kt  FabricHexdumpClient.kt  FabricHexdumpModMenu.kt  HexdumpAbstractionsImpl.kt
fabric/src/main/resources/: fabric.mod.json  hexdump-fabric.mixins.json
forge/: build.gradle.kts
forge/src/main/java/io/github/jojotastic777/hexdump/forge/mixin/: ForgeMixinConfigPlugin.java  MixinDatagenMain.java
forge/src/main/kotlin/io/github/jojotastic777/hexdump/forge/: ForgeHexdump.kt  ForgeHexdumpClient.kt  HexdumpAbstractionsImpl.kt
forge/src/main/resources/: hexdump-forge.mixins.json  pack.mcmeta
